--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"astro-netlify-cms": "^0.5.3",
 		"astro-seo": "^0.7.4",
 		"bad-words": "^3.0.4",
+		"cookieconsent": "3",
 		"dotenv": "^16.3.1",
 		"openai": "^3.3.0",
 		"rehype-autolink-headings": "^6.1.1",
