--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@astrojs/sitemap": "^1.3.3",
 		"@astrojs/tailwind": "^4.0.0",
 		"@fontsource-variable/inter": "^5.0.3",
+		"@jop-software/astro-cookieconsent": "^1.0.2",
 		"@types/alpinejs": "^3.7.2",
 		"alpinejs": "^3.12.2",
 		"astro": "^2.7.2",
