--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@astrojs/alpinejs": "^0.2.2",
 		"@astrojs/image": "^0.17.1",
 		"@astrojs/mdx": "^0.19.7",
+		"@astrojs/partytown": "^1.2.3",
 		"@astrojs/rss": "^2.4.3",
 		"@astrojs/sitemap": "^1.4.0",
 		"@astrojs/tailwind": "^4.0.0",
