--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
 		"@astrojs/image": "^0.17.1",
 		"@astrojs/mdx": "^0.19.7",
 		"@astrojs/partytown": "^1.2.3",
+		"@astrojs/react": "^2.2.1",
 		"@astrojs/rss": "^2.4.3",
 		"@astrojs/sitemap": "^1.4.0",
 		"@astrojs/tailwind": "^4.0.0",
 		"@fontsource-variable/inter": "^5.0.3",
 		"@jop-software/astro-cookieconsent": "^1.0.2",
 		"@types/alpinejs": "^3.7.2",
+		"@types/react": "^18.2.18",
+		"@types/react-dom": "^18.2.7",
 		"alpinejs": "^3.12.2",
 		"astro": "^2.7.2",
 		"astro-i18next": "^1.0.0-beta.21",
@@ -36,6 +39,8 @@
 		"cookieconsent": "3",
 		"dotenv": "^16.3.1",
 		"openai": "^3.3.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
 		"rss-parser": "^3.13.0",
