--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"astro-i18next": "^1.0.0-beta.21",
 		"astro-icon": "^0.8.1",
 		"astro-netlify-cms": "^0.5.3",
+		"astro-robots": "^1.0.2",
 		"astro-seo": "^0.7.4",
 		"bad-words": "^3.0.4",
 		"dotenv": "^16.3.1",
