--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,4 @@
 {
 	"tabWidth": 2,
-	"useTabs": false,
-	"bracketSameLine": true,
-	"printWidth": 150,
-	"htmlWhitespaceSensitivity": "ignore"
+	"useTabs": false
 }
