--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,3 +1,7 @@
+backend:
+    name: git-gateway
+    branch: main
+
 publish_mode: editorial_workflow
 media_folder: public/images
 public_folder: /images
