refactor: WIP testing rss with new lib

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@astrojs/tailwind": "^5.0.2",
     "@fontsource-variable/inter": "^5.0.13",
     "@types/alpinejs": "^3.13.2",
+    "@types/lodash": "^4.17.5",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "alpinejs": "^3.13.1",
@@ -35,6 +36,8 @@
     "astro-seo": "^0.8.0",
     "bad-words": "^3.0.4",
     "dotenv": "^16.3.1",
+    "feed": "^4.2.2",
+    "lodash": "^4.17.21",
     "openai": "^4.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
