--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,25 @@
 {
   // cva
   "tailwindCSS.experimental.classRegex": [
-    ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
-    ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+    [
+      "cva\\(([^)]*)\\)",
+      "[\"'`]([^\"'`]*).*?[\"'`]"
+    ],
+    [
+      "cx\\(([^)]*)\\)",
+      "(?:'|\"|`)([^']*)(?:'|\"|`)"
+    ]
   ],
-
   "editor.quickSuggestions": {
     "strings": true
   },
-
   // format on save
   "editor.formatOnSave": true,
-
   // Sort imports and automatically remove
   // unused imports when pressing CTRL + S
   "editor.codeActionsOnSave": {
     "source.organizeImports": "explicit",
     "source.fixAll.eslint": "explicit"
-  }
+  },
+  "editor.fontSize": 14
 }
